test/valid/break.js
while (false) { 1; break; 2; }
