test/invalid/if.js
if (2) { 1; } else { false; }
